// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: status === ERROR: вернет правильный результат, если есть ДТП 1`] = `
Object {
  "key": "Информация об участии в 2 ДТП",
}
`;

exports[`карточка: status === ERROR: вернет правильный результат, если нет ДТП 1`] = `
Object {
  "key": "Данные о ДТП не найдены",
}
`;

exports[`карточка: status === OK: вернет правильный результат 1`] = `
Object {
  "key": "Данные о ДТП не найдены",
}
`;

exports[`карточка: status === NOT_VISIBLE, record_count === -1: вернет правильный результат 1`] = `
Object {
  "key": "Информация об участии в ДТП",
}
`;

exports[`карточка: status === UNKNOWN: вернет правильный результат 1`] = `
Object {
  "key": "Информация о ДТП появится позже",
}
`;

exports[`карточка: если record_count -1 вернет правильный результат (без количества) 1`] = `
Object {
  "key": "Информация об участии в ДТП",
}
`;

exports[`отчет: status === ERROR: вернет правильный результат, если есть ДТП 1`] = `
Object {
  "key": "Участие в ДТП",
  "value": "2 ДТП",
}
`;

exports[`отчет: status === ERROR: вернет правильный результат, если нет ДТП 1`] = `
Object {
  "key": "Участие в ДТП",
  "value": "Данные о ДТП не обнаружены",
}
`;

exports[`отчет: status === OK: вернет правильный результат 1`] = `
Object {
  "key": "Участие в ДТП",
  "value": "Данные о ДТП не обнаружены",
}
`;

exports[`отчет: status === UNKNOWN: вернет правильный результат 1`] = `
Object {
  "key": "Участие в ДТП",
  "value": "Информация появится чуть позже",
}
`;
